--- a/src/index.css
+++ b/src/index.css
@@ -12,6 +12,37 @@
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 }
+.app-container {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    min-height: 100vh;
+    padding: 20px;
+}
+
+header {
+    margin-bottom: 30px;
+    z-index: 10;
+}
+.result-container {
+    background-image: url('./assets/man_met_epiche_zonebril.webp');
+    background-size: cover;
+    background-position: center;
+    background-repeat: no-repeat;
+    min-height: 100vh;
+    width: 100vw;
+    position: fixed;
+    top: 0;
+    left: 0;
+}
+
+h1 {
+    color: red;
+    background: white;
+    font-size: 2rem;
+    margin: 0;
+}
+
 
 a {
   font-weight: 500;
